k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 047719646358.dkr.ecr.ap-south-1.amazonaws.com/backendrepo:8ce0fe67e07b1b7194cd0ed5f7d5dc2b93b56a59
          ports:
          - containerPort: 5001
      imagePullSecrets:
        - name: ecr-creds
