k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 047719646358.dkr.ecr.ap-south-1.amazonaws.com/backendrepo:3e98799a5d9c90d0666ccdc9be9f4d2b6f1581b0
          ports:
          - containerPort: 5001
      imagePullSecrets:
      - name: ecr-creds
