k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - nginx.fun
    secretName: nginx-fun-tls
  rules:
  - host: nginx.fun  # Use your actual domain here
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend  # Replace with your backend service name
            port:
              number: 80
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: backend  # Replace with your backend service name
            port:
              number: 5001
